syntax="proto3";

option java_multiple_files=true;
option java_package="com.grpc";
option java_outer_classname="HelloWorldProto";

message HelloRequest{
     string name=1;
}

message HelloResponse {
    string msg=2;
}

service HelloService{
      rpc sendHello(HelloRequest) returns(HelloResponse){}
}